fix paragraph spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,7 +67,7 @@ h2 {
 .full-image {
   width: 100%;
   height: auto;
-  margin: 30px 0;
+
 }
 
 .half-image {
